Colaboratory를 통해 생성됨

--- a/백준_탐색.ipynb
+++ b/백준_탐색.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrcTbYJsBVYdLoNmy2gwYB",
+      "authorship_tag": "ABX9TyN02D3Q8iJhGbxhbw1IX6S3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**11724 - 연결 요소의 개수 구하기**"
+        "**11724 - [연결 요소의 개수 구하기](https://www.acmicpc.net/problem/11724)**"
       ],
       "metadata": {
         "id": "ejbfBjOqF_Bv"
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -101,7 +101,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2023 - 신기한 소수 찾기**"
+        "**2023 - [신기한 소수 찾기](https://www.acmicpc.net/problem/2023)**"
       ],
       "metadata": {
         "id": "2JZF7MNAGHgW"
@@ -143,7 +143,7 @@
         "id": "M9u3TwZkGLZT",
         "outputId": "f66b2a0e-ad40-479b-c74e-de79196974ce"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,7 +173,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**13023 - 친구 관계 파악하기**"
+        "**13023 - [친구 관계 파악하기](https://www.acmicpc.net/problem/13023)**"
       ],
       "metadata": {
         "id": "7pXPJgdjGLvC"
@@ -224,7 +224,7 @@
         "id": "clX1q7BaGQa9",
         "outputId": "7977808d-778b-4832-f751-01b8d0def62e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1260 - DFS와  BFS 프로그램**"
+        "**1260 - [DFS와  BFS 프로그램](https://www.acmicpc.net/problem/1260)**\n"
       ],
       "metadata": {
         "id": "utF_krcEGSiq"
@@ -313,7 +313,7 @@
         "id": "zC4IEnVbGWeh",
         "outputId": "4324c394-a51b-4323-82a4-1672faf0a4b2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2178 - 미로 탐색하기**"
+        "**2178 - [미로 탐색하기](https://www.acmicpc.net/problem/2178)**"
       ],
       "metadata": {
         "id": "rDQe-Q1XGWwS"
@@ -383,7 +383,7 @@
         "id": "YWy25waQGZuB",
         "outputId": "735d3881-8214-4512-991f-d1618c95d2b4"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +402,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1167 - 트리의 지름 구하기**"
+        "**1167 - [트리의 지름 구하기](https://www.acmicpc.net/problem/1167)**"
       ],
       "metadata": {
         "id": "I_JldEijGbHx"
@@ -454,7 +454,7 @@
         "id": "BQ5Yn0QjpLc5",
         "outputId": "db62b036-0bf5-4cea-a0f1-0257a9be2b36"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1920 - 원하는 정수 찾기**"
+        "**1920 - [원하는 정수 찾기](https://www.acmicpc.net/problem/1920)**"
       ],
       "metadata": {
         "id": "AD_SgoP8Gffr"
@@ -530,7 +530,7 @@
         "id": "fPQgw26CGiuY",
         "outputId": "92ed044f-ba81-4b22-b0dc-1a9543ad71e2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +552,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2343 - 블루레이 만들기**"
+        "**2343 - [블루레이 만들기](https://www.acmicpc.net/problem/2343)**"
       ],
       "metadata": {
         "id": "6dMFGgpUGkdJ"
@@ -598,7 +598,7 @@
         "id": "HkMZ3XIjfRop",
         "outputId": "499ac242-492f-45c1-9028-bd1d8cdeb7ee"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,7 +614,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1300 - 배열에서 K번째 수 찾기**"
+        "**1300 - [배열에서 K번째 수 찾기](https://www.acmicpc.net/problem/1300)**"
       ],
       "metadata": {
         "id": "1f4W-squGmzy"
@@ -653,7 +653,7 @@
         "id": "MsZxEF5mGpxJ",
         "outputId": "53b8dafa-d59b-4aa0-ca92-9ffd309af254"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
