--- a/백준_그리디.ipynb
+++ b/백준_그리디.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6Ii6KRdNT/DuOzWj4p6O8",
+      "authorship_tag": "ABX9TyPqw+ebJhv/ekPvWI3vyVNA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**11047 - 동전 개수의 최솟값 구하기**"
+        "**11047 - [동전 개수의 최솟값 구하기](https://www.acmicpc.net/problem/11047)**"
       ],
       "metadata": {
         "id": "NoT3mRMww8Zi"
@@ -56,7 +56,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1715 - 카드 정렬하기**"
+        "**1715 - [카드 정렬하기](https://www.acmicpc.net/problem/1715)**"
       ],
       "metadata": {
         "id": "zB-oN6AXxAdc"
@@ -74,7 +74,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1744 - 수를 묶어서 최댓값 만들기**"
+        "**1744 - [수를 묶어서 최댓값 만들기](https://www.acmicpc.net/problem/1744)**"
       ],
       "metadata": {
         "id": "nF8Br1b2xGDN"
@@ -92,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1931 - 회의실 배정하기**"
+        "**1931 - [회의실 배정하기](https://www.acmicpc.net/problem/1931)**"
       ],
       "metadata": {
         "id": "tEwUHY-nxMiV"
@@ -110,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1541 - 최솟값을 만드는 괄호 배치 찾기**"
+        "**1541 - [최솟값을 만드는 괄호 배치 찾기](https://www.acmicpc.net/problem/1541)**"
       ],
       "metadata": {
         "id": "KKNmSqc5xTvt"
