Colaboratory를 통해 생성됨

--- a/백준_동적계획법.ipynb
+++ b/백준_동적계획법.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7GU/T4z+Tbczk68Py9VzU",
+      "authorship_tag": "ABX9TyMEJ9vRugMzT5H0hYKO69AN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1463 - 정수를 1로 만들기**"
+        "**1463 - [정수를 1로 만들기](https://www.acmicpc.net/problem/1463)**"
       ],
       "metadata": {
         "id": "oDd6gX9v1xM9"
@@ -56,7 +56,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**14501 - 퇴사 준비하기**"
+        "**14501 - [퇴사 준비하기](https://www.acmicpc.net/problem/14501)**"
       ],
       "metadata": {
         "id": "f7xMTUjV1zbJ"
@@ -74,7 +74,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2193 - 이친수 구하기**"
+        "**2193 - [이친수 구하기](https://www.acmicpc.net/problem/2193)**"
       ],
       "metadata": {
         "id": "aVHhimwf2LGF"
@@ -92,7 +92,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**11726 - 2*N 타일 채우기**"
+        "**11726 - [2*N 타일 채우기](https://www.acmicpc.net/problem/11726)**"
       ],
       "metadata": {
         "id": "CRh8MJCk2U2z"
@@ -110,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**10844 - 계단 수 구하기**"
+        "**10844 - [계단 수 구하기](https://www.acmicpc.net/problem/10844)**"
       ],
       "metadata": {
         "id": "idOfFfa92gsI"
@@ -128,7 +128,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**13398 - 연속된 정수의 합 구하기**"
+        "**13398 - [연속된 정수의 합 구하기](https://www.acmicpc.net/problem/13398)**"
       ],
       "metadata": {
         "id": "wbg-TlZU2x-L"
@@ -146,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**9252 - 최장 공통 부분 수열 찾기**"
+        "**9252 - [최장 공통 부분 수열 찾기](https://www.acmicpc.net/problem/9252)**"
       ],
       "metadata": {
         "id": "1bjuhgsY29ok"
@@ -164,7 +164,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1915 - 가장 큰 정사각형 찾기**"
+        "**1915 - [가장 큰 정사각형 찾기](https://www.acmicpc.net/problem/1915)**"
       ],
       "metadata": {
         "id": "E86xV-9_3RIS"
@@ -182,7 +182,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1328 - 빌딩 순서 구하기**"
+        "**1328 - [빌딩 순서 구하기](https://www.acmicpc.net/problem/1328)**"
       ],
       "metadata": {
         "id": "E1j1wVmO3hA_"
@@ -200,7 +200,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2342 - DDR을 해보자**"
+        "**2342 - [DDR을 해보자](https://www.acmicpc.net/problem/2342)**"
       ],
       "metadata": {
         "id": "FP69ucmR3j_q"
@@ -218,7 +218,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**11049 - 행렬 곱 연산 횟수의 최솟값 구하기**"
+        "**11049 - [행렬 곱 연산 횟수의 최솟값 구하기](https://www.acmicpc.net/problem/11049)**"
       ],
       "metadata": {
         "id": "7IgyQC6436_p"
@@ -236,7 +236,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**2098 - 외판원의 순회 경로 짜기**"
+        "**2098 - [외판원의 순회 경로 짜기](https://www.acmicpc.net/problem/2098)**"
       ],
       "metadata": {
         "id": "ntw8QZlB4SzF"
@@ -254,7 +254,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**14003 - 가장 길게 증가하는 부분 수열 찾기**"
+        "**14003 - [가장 길게 증가하는 부분 수열 찾기](https://www.acmicpc.net/problem/14003)**"
       ],
       "metadata": {
         "id": "7dKO3pjh4nZH"
