Colaboratory를 통해 생성됨

--- a/백준_동적계획법.ipynb
+++ b/백준_동적계획법.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMEJ9vRugMzT5H0hYKO69AN",
+      "authorship_tag": "ABX9TyOmnUQKbBOWH9V1hurrkyAL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,12 +262,69 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "N = int(input())\n",
+        "A = [0] + list(map(int, input().split()))\n",
+        "B = [0]*1000001\n",
+        "D = [0]*1000001\n",
+        "B[1] = A[1]\n",
+        "D[1] = 1\n",
+        "\n",
+        "def binary(l, r, now):\n",
+        "    while l < r:\n",
+        "        mid = (l + r)//2\n",
+        "        if B[mid] < now:\n",
+        "            l = mid + 1\n",
+        "        else:\n",
+        "            r = mid\n",
+        "    return l\n",
+        "\n",
+        "index = 0\n",
+        "max_length = 1\n",
+        "\n",
+        "for i in range(2, N+1):\n",
+        "    if B[max_length] < A[i]:\n",
+        "        max_length += 1\n",
+        "        B[max_length] = A[i]\n",
+        "        D[i] = max_length\n",
+        "    else:\n",
+        "        index = binary(1, max_length, A[i])\n",
+        "        B[index] = A[i]\n",
+        "        D[i] = index\n",
+        "        \n",
+        "answer = max_length\n",
+        "answer_list = []\n",
+        "\n",
+        "for i in range(N, 0, -1):\n",
+        "    if D[i] == max_length:\n",
+        "        answer_list.append(A[i])\n",
+        "        max_length -= 1\n",
+        "        \n",
+        "print(answer)\n",
+        "\n",
+        "for i in range(len(answer_list) - 1, -1, -1):\n",
+        "    print(answer_list[i], end = ' ')"
+      ],
       "metadata": {
-        "id": "bM6n31Kh4s-C"
+        "id": "fwvxnuT1aJUl",
+        "outputId": "45bc1825-26ad-4093-b22f-169d1fb18d27",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "11 5 10 12 7 14 3 8 24 2\n",
+            "5\n",
+            "5 10 12 14 24 "
+          ]
+        }
+      ]
     }
   ]
 }
