Colaboratory를 통해 생성됨

--- a/백준_동적계획법.ipynb
+++ b/백준_동적계획법.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmnUQKbBOWH9V1hurrkyAL",
+      "authorship_tag": "ABX9TyPyoBdUdGvrUlMSMj8elexR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,12 +46,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "-Z3-_gUA1drU"
+        "id": "-Z3-_gUA1drU",
+        "outputId": "24bd76c0-2f06-470c-f5be-3f2754ad94e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "3\n"
+          ]
+        }
+      ],
+      "source": [
+        "N = int(input())\n",
+        "D = [0]*1000001\n",
+        "D[1] = 0\n",
+        "D[2] = 1\n",
+        "\n",
+        "for i in range(2, N+1):\n",
+        "    D[i] = D[i-1] + 1\n",
+        "    \n",
+        "    if i % 2 == 0:\n",
+        "        D[i] = min(D[i], D[i//2] + 1)\n",
+        "        \n",
+        "    if i % 3 == 0:\n",
+        "        D[i] = min(D[i], D[i//3] + 1)\n",
+        "        \n",
+        "print(D[N])"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -64,12 +93,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "# input = sys.stdin.readline\n",
+        "\n",
+        "N = int(input())\n",
+        "T = [0]*16\n",
+        "P = [0]*16\n",
+        "\n",
+        "for i in range(1, N+1):\n",
+        "    T[i], P[i] = map(int, input().split())\n",
+        "    \n",
+        "D = [0]*17\n",
+        "\n",
+        "for i in range(N, 0, -1):\n",
+        "    if i + T[i] - 1 > N:\n",
+        "        D[i] = D[i+1]\n",
+        "    else:\n",
+        "        D[i] = max(D[i+1], D[i+T[i]] + P[i])\n",
+        "        \n",
+        "print(D[1])"
+      ],
       "metadata": {
-        "id": "-RuzrO_i2ENE"
+        "id": "-RuzrO_i2ENE",
+        "outputId": "3d0c0b12-c212-478f-b5e7-4cd3575cefb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n",
+            "3 10\n",
+            "5 20\n",
+            "1 10\n",
+            "1 20\n",
+            "2 15\n",
+            "4 40\n",
+            "2 200\n",
+            "45\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -82,12 +151,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "N = int(input())\n",
+        "    \n",
+        "D0 = [0]*(N+1)\n",
+        "D1 = [0]*(N+1)\n",
+        "\n",
+        "D0[1] = 0\n",
+        "D1[1] = 1\n",
+        "\n",
+        "for i in range(2, N+1):\n",
+        "    D0[i] = D0[i-1] + D1[i-1]\n",
+        "    D1[i] = D0[i-1]\n",
+        "    \n",
+        "answer = D0[N] + D1[N]\n",
+        "\n",
+        "print(answer)"
+      ],
       "metadata": {
-        "id": "Eu-jX3pY2Ugs"
+        "id": "Eu-jX3pY2Ugs",
+        "outputId": "a44b9f38-c065-4ac5-ec0e-ad142438421d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -100,12 +198,38 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "N = int(input())\n",
+        "D = [0]*(1001)\n",
+        "\n",
+        "D[1] = 1\n",
+        "D[2] = 2\n",
+        "\n",
+        "for i in range(3, N+1):\n",
+        "    D[i] = D[i-1] + D[i-2]\n",
+        "    \n",
+        "answer = D[N] % 10007\n",
+        "\n",
+        "print(answer)"
+      ],
       "metadata": {
-        "id": "iGAn4eOz2Yad"
+        "id": "iGAn4eOz2Yad",
+        "outputId": "520f6828-db37-4b97-ca13-bab7861b1d8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "55\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -118,12 +242,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "N = int(input())\n",
+        "D = [[0]*10 for _ in range(101)]\n",
+        "\n",
+        "for i in range(1, 10):\n",
+        "    D[1][i] = 1\n",
+        "    \n",
+        "for i in range(2, N+1):\n",
+        "    for j in range(10):\n",
+        "        if j == 0:\n",
+        "            D[i][j] = D[i-1][j+1]\n",
+        "        elif j == 9:\n",
+        "            D[i][j] = D[i-1][j-1]\n",
+        "        else:\n",
+        "            D[i][j] = D[i-1][j-1] + D[i-1][j+1]\n",
+        "            \n",
+        "sum = 0\n",
+        "\n",
+        "for i in range(10):\n",
+        "    sum += D[N][i]\n",
+        "    \n",
+        "print(sum % 1000000000)"
+      ],
       "metadata": {
-        "id": "gl0XDPen2xka"
+        "id": "gl0XDPen2xka",
+        "outputId": "22363284-1652-4b66-e0a0-6f1e4811ba29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "17\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -136,12 +295,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "# input = sys.stdin.readline\n",
+        "\n",
+        "N = int(input())\n",
+        "nums = list(map(int, input().split()))\n",
+        "L = [0]*N\n",
+        "R = [0]*N\n",
+        "L[0] = nums[0]\n",
+        "R[-1] = nums[-1]\n",
+        "\n",
+        "for i in range(1, N):\n",
+        "    if L[i-1] < 0:\n",
+        "        L[i] = nums[i]\n",
+        "    else:\n",
+        "        L[i] = L[i-1] + nums[i]\n",
+        "    \n",
+        "for i in range(N-2, -1, -1):\n",
+        "    if R[i+1] < 0:\n",
+        "        R[i] = nums[i]\n",
+        "    else:\n",
+        "        R[i] = R[i+1] + nums[i]\n",
+        "    \n",
+        "answer = max(L)\n",
+        "\n",
+        "for i in range(1, N-1):\n",
+        "    answer = max(answer, L[i-1] + R[i+1])\n",
+        "    \n",
+        "print(answer)"
+      ],
       "metadata": {
-        "id": "xOWvQ3uc20hM"
+        "id": "xOWvQ3uc20hM",
+        "outputId": "7c4d28cd-2c1b-4d81-cbc1-e5a3d6242c37",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "10 -4 3 1 5 6 -35 12 21 -1\n",
+            "54\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,12 +356,66 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(10000)\n",
+        "# input = sys.stdin.readline\n",
+        "\n",
+        "A = list(input())\n",
+        "A.pop()\n",
+        "B = list(input())\n",
+        "B.pop()\n",
+        "\n",
+        "D = [[0]*(len(B)+1) for _ in range(len(A)+1)]\n",
+        "\n",
+        "for i in range(1, len(A)+1):\n",
+        "    for j in range(1, len(B)+1):\n",
+        "        if A[i-1] == B[j-1]:\n",
+        "            D[i][j] = D[i-1][j-1] + 1\n",
+        "        else:\n",
+        "            D[i][j] = max(D[i-1][j], D[i][j-1])\n",
+        "            \n",
+        "path = []\n",
+        "\n",
+        "def find(x, y):\n",
+        "    if x == 0 or y == 0:\n",
+        "        return\n",
+        "    if (D[x][y] == D[x-1][y] + 1) and (D[x][y] == D[x][y-1] + 1):\n",
+        "        path.append(A[x-1])\n",
+        "        find(x-1, y-1)\n",
+        "    else:\n",
+        "        if D[x-1][y] > D[x][y-1]:\n",
+        "            find(x-1, y)\n",
+        "        else:\n",
+        "            find(x, y-1)\n",
+        "            \n",
+        "find(len(A), len(B))\n",
+        "\n",
+        "print(D[-1][-1])\n",
+        "\n",
+        "for i in range(len(path)-1, -1, -1):\n",
+        "    print(path[i], end = '')"
+      ],
       "metadata": {
-        "id": "kTwCCjjH3ERx"
+        "id": "kTwCCjjH3ERx",
+        "outputId": "8466cc0c-434e-4dec-8006-5869dfd43092",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ACAYKP \n",
+            "CAPCAK \n",
+            "4\n",
+            "ACAK"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -172,12 +428,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "# input = sys.stdin.readline\n",
+        "\n",
+        "n, m = map(int, input().split())\n",
+        "D = [[0]*1000 for _ in range(1000)]\n",
+        "\n",
+        "for i in range(n):\n",
+        "    data = list(input())\n",
+        "    for j in range(m):\n",
+        "        D[i][j] = int(data[j])\n",
+        "\n",
+        "result = 0\n",
+        "\n",
+        "for i in range(n):\n",
+        "    for j in range(m):\n",
+        "        if D[i][j] == 1 and i > 0 and j > 0:\n",
+        "            D[i][j] = min(D[i-1][j-1], D[i-1][j], D[i][j-1]) + 1\n",
+        "        result = max(result, D[i][j])\n",
+        "        \n",
+        "print(result*result)"
+      ],
       "metadata": {
-        "id": "3BGxySk83eSA"
+        "id": "3BGxySk83eSA",
+        "outputId": "b6fedbee-1d31-4d6c-a4e1-af9a6a7cac1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 4\n",
+            "0100\n",
+            "0111\n",
+            "1110\n",
+            "0010\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -190,12 +484,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "N, L, R = map(int, input().split())\n",
+        "D = [[[0 for k in range(101)] for j in range(101)] for i in range(101)]\n",
+        "D[1][1][1] = 1\n",
+        "\n",
+        "for i in range(2, N+1):\n",
+        "    for j in range(1, L+1):\n",
+        "        for k in range(1, R+1):\n",
+        "            D[i][j][k] = D[i-1][j-1][k] + D[i-1][j][k-1] + D[i-1][j][k]*(i-2)\n",
+        "            \n",
+        "print(D[N][L][R] % 1000000007)"
+      ],
       "metadata": {
-        "id": "JffWg7pa3jvY"
+        "id": "JffWg7pa3jvY",
+        "outputId": "99da2d75-5c09-4cb9-9eae-cf10e8234ecb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 2 2\n",
+            "2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -312,7 +630,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
