Colaboratory를 통해 생성됨

--- a/백준_동적계획법.ipynb
+++ b/백준_동적계획법.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyoBdUdGvrUlMSMj8elexR",
+      "authorship_tag": "ABX9TyP3DdO08E7/Gi+ThaYEMe2g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "-Z3-_gUA1drU",
         "outputId": "24bd76c0-2f06-470c-f5be-3f2754ad94e1",
@@ -121,7 +121,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +175,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,7 +272,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,7 +457,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +503,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,12 +526,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "\n",
+        "input_list = list(map(int, input().split()))\n",
+        "D = [[[sys.maxsize for k in range(5)] for j in range(5)] for i in range(100001)]\n",
+        "D[0][0][0] = 0\n",
+        "mp = [[0, 2, 2, 2, 2],\n",
+        "     [2, 1, 3, 4, 3],\n",
+        "     [2, 3, 1, 3, 4],\n",
+        "     [2, 4, 3, 1, 3],\n",
+        "     [2, 3, 4, 3, 1]]\n",
+        "\n",
+        "s = 1\n",
+        "index = 0\n",
+        "\n",
+        "while input_list[index] != 0:\n",
+        "    # n = 다음에 발이 이동해야 하는 위치\n",
+        "    n = input_list[index]\n",
+        "    \n",
+        "    # 왼발을 이동시키는 경우\n",
+        "    for j in range(5):\n",
+        "        # 다음에 왼발을 이동시킬 위치에 이미 오른발이 있으면 갈 수 없음\n",
+        "        if n == j:\n",
+        "            continue\n",
+        "        for i in range(5):\n",
+        "            D[s][n][j] = min(D[s-1][i][j] + mp[i][n], D[s][n][j])\n",
+        "\n",
+        "    # 오른발을 이동시키는 경우        \n",
+        "    for i in range(5):\n",
+        "        # 다음에 오른발을 이동시킬 위치에 이미 왼발이 있으면 갈 수 없음\n",
+        "        if n == i:\n",
+        "            continue\n",
+        "        for j in range(5):\n",
+        "            D[s][i][n] = min(D[s-1][i][j] + mp[j][n], D[s][i][n])\n",
+        "\n",
+        "    # 스텝과 인덱스를 +1씩 하면서 반복        \n",
+        "    s += 1\n",
+        "    index += 1\n",
+        "   \n",
+        "s -= 1\n",
+        "result = sys.maxsize\n",
+        "\n",
+        "for i in range(5):\n",
+        "    for j in range(5):\n",
+        "        result = min(result, D[s][i][j])\n",
+        "        \n",
+        "print(result)"
+      ],
       "metadata": {
-        "id": "FTvZBJYN3vUU"
+        "id": "FTvZBJYN3vUU",
+        "outputId": "46b3e02f-c494-49c5-ea66-cb295c6c5576",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 2 4 0\n",
+            "8\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
