Colaboratory를 통해 생성됨

--- a/백준_동적계획법.ipynb
+++ b/백준_동적계획법.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP3DdO08E7/Gi+ThaYEMe2g",
+      "authorship_tag": "ABX9TyNdfHbTHD/Tgz2fAYasWoFN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -581,7 +581,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,12 +604,56 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(10000)\n",
+        "# input = sys.stdin.readline \n",
+        "\n",
+        "N = int(input())\n",
+        "M = [(0, 0)]\n",
+        "for _ in range(N):\n",
+        "    r, c = map(int, input().split())\n",
+        "    M.append((r, c))\n",
+        "D = [[-1 for j in range(501)] for i in range(501)]\n",
+        "\n",
+        "def find(s, e):\n",
+        "    if D[s][e] != -1:\n",
+        "        return D[s][e]\n",
+        "    if s == e:\n",
+        "        return 0\n",
+        "    if s + 1 == e:\n",
+        "        return M[s][0]*M[s][1]*M[e][1]\n",
+        "    result = sys.maxsize\n",
+        "    for i in range(s, e):\n",
+        "        result = min(result, find(s, i) + find(i+1, e) + M[s][0]*M[i][1]*M[e][1])\n",
+        "    D[s][e] = result\n",
+        "    return D[s][e]\n",
+        "\n",
+        "answer = find(1, N)\n",
+        "\n",
+        "print(answer)"
+      ],
       "metadata": {
-        "id": "mKEP63Xl3_JH"
+        "id": "mKEP63Xl3_JH",
+        "outputId": "6e9289e8-8743-4516-ea88-bac70f734bab",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "5 3\n",
+            "3 2\n",
+            "2 6\n",
+            "90\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -622,12 +666,59 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import sys\n",
+        "sys.setrecursionlimit(10000)\n",
+        "# input = sys.stdin.readline\n",
+        "\n",
+        "N = int(input())\n",
+        "W = []\n",
+        "for _ in range(N):\n",
+        "    W.append(list(map(int, input().split())))\n",
+        "D = [[0 for j in range(1<<16)] for i in range(16)]\n",
+        "\n",
+        "def tsp(c, v):\n",
+        "    if v == (1<<N) - 1:\n",
+        "        if W[c][0] != 0:\n",
+        "            return W[c][0]\n",
+        "        else:\n",
+        "            return sys.maxsize\n",
+        "    if D[c][v] != 0:\n",
+        "        return D[c][v]\n",
+        "    \n",
+        "    result = sys.maxsize\n",
+        "    for i in range(0, N):\n",
+        "        if v & (1<<i) == 0 and W[c][i] != 0:\n",
+        "            result = min(result, tsp(i, v | (1<<i)) + W[c][i])\n",
+        "    D[c][v] = result\n",
+        "    return D[c][v]\n",
+        "\n",
+        "answer = tsp(0, 1)\n",
+        "\n",
+        "print(answer)"
+      ],
       "metadata": {
-        "id": "xFRB434P4V6N"
+        "id": "xFRB434P4V6N",
+        "outputId": "8ca36ca9-2218-49b3-a267-db1aa6f5921f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "0 10 15 20\n",
+            "5 0 9 10\n",
+            "6 13 0 12\n",
+            "8 8 9 0\n",
+            "35\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
